@@ -44,6 +44,6 @@ import org.slf4j.LoggerFactory;
 
 public class Constants {
 
-  public static final String VERSION = "19.24.0";
+  public static final String VERSION = "19.25.0";
 
 }
